[gd_scene load_steps=7 format=3 uid="uid://cwhlcffttcwct"]

[ext_resource type="Script" path="res://popup/scripts/popup.gd" id="1_4by63"]
[ext_resource type="PackedScene" uid="uid://c0h36q7mxwork" path="res://animation/animation.tscn" id="2_vqrhm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mjpvp"]
bg_color = Color(0.611765, 1, 0.603922, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1h4wv"]
bg_color = Color(0.964706, 0.964706, 0.964706, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jwaun"]
bg_color = Color(1, 1, 1, 1)
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fwf8t"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
bg_color = Color(0.890196, 0.890196, 0.890196, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="popup" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4by63")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" parent="." instance=ExtResource("2_vqrhm")]
layout_mode = 1

[node name="window" type="BoxContainer" parent="Control"]
custom_minimum_size = Vector2(100, 200)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.109
anchor_top = 0.253
anchor_right = 0.883
anchor_bottom = 0.74
offset_left = 0.383995
offset_top = 0.199005
offset_right = -0.192017
offset_bottom = -0.00201416
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0
vertical = true

[node name="pathPanel" type="Panel" parent="Control/window"]
clip_children = 2
clip_contents = true
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_mjpvp")

[node name="BoxContainer" type="BoxContainer" parent="Control/window/pathPanel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.251
offset_left = 17.0
offset_top = 11.0
offset_right = -17.0
offset_bottom = 0.0189972
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="Control/window/pathPanel/BoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "اسم"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BoxContainer2" type="BoxContainer" parent="Control/window/pathPanel"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.381
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 27.0
offset_top = -0.0110016
offset_right = -25.0
offset_bottom = -36.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="LineEdit" type="LineEdit" parent="Control/window/pathPanel/BoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_selected_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_1h4wv")
theme_override_styles/focus = SubResource("StyleBoxFlat_1h4wv")
text = "جدول جديد"
alignment = 1

[node name="pathPanel2" type="Panel" parent="Control/window"]
clip_children = 2
clip_contents = true
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_jwaun")

[node name="BoxContainer" type="BoxContainer" parent="Control/window/pathPanel2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 8.0
offset_right = -19.0
offset_bottom = -9.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Button2" type="Button" parent="Control/window/pathPanel2/BoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_fwf8t")
text = "الغاء"

[node name="Button" type="Button" parent="Control/window/pathPanel2/BoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_fwf8t")
text = "تاكيد
"

[connection signal="on_close" from="Control" to="." method="_on_control_on_close"]
[connection signal="pressed" from="Control/window/pathPanel2/BoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Control/window/pathPanel2/BoxContainer/Button" to="." method="_on_button_pressed"]
